--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,27 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="theme-color" content="#000000" />
+		<!-- <link rel="icon" src="../images/SMlogo.png" /> -->
+
+		<link
+			rel="icon"
+			href="%PUBLIC_URL%/SMlogo1.png"
+			type="image/png"
+			sizes="32x32"
+		/>
+		<link
+			rel="shortcut icon"
+			href="%PUBLIC_URL%/SMlogo1.png"
+			type="image/png"
+			sizes="260x260"
+		/>
+
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
 
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
+		<meta name="description" content="Seif Miehiar Portfolio" />
 		<link
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
