--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 		<link
 			rel="icon"
-			href="%PUBLIC_URL%/SMlogo1.png"
+			href="%PUBLIC_URL%/SMlogo.png"
 			type="image/png"
 			sizes="32x32"
 		/>
