--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="theme-color" content="#000000" />
-		<!-- <link rel="icon" src="../images/SMlogo.png" /> -->
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'"
+		/>
 
 		<link
 			rel="icon"
