--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="theme-color" content="#000000" />
 
-		<link
+		<!-- <link
 			rel="icon"
 			href="%PUBLIC_URL%/SMlogo.png"
 			type="image/png"
@@ -15,7 +15,7 @@
 			href="%PUBLIC_URL%/SMlogo1.png"
 			type="image/png"
 			sizes="260x260"
-		/>
+		/> -->
 
 		<meta
 			name="viewport"
