--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,18 @@
 
 		<meta name="description" content="Seif Miehiar Portfolio" />
 		<link
+			type="text/css"
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
 		/>
 		<link
+			type="text/css"
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 		/>
 
 		<link
+			type="text/css"
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -40,6 +43,7 @@
 		/>
 
 		<link
+			type="text/css"
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 			integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
