--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
 			var Alert = ReactBootstrap.Alert;
 		</script>
 
-		<title>React App</title>
+		<title>Seif Miehiar</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
